--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Restful Service Provider
+  p  Restful Service Provider for MindWeb application
